--- a/fi/index.html
+++ b/fi/index.html
@@ -221,7 +221,7 @@
               </li>
 			  <li class="scrollbar-item">
                 <div class="latest-game-card">
-                  <a href="lahtifgc.html">
+                  <!--<a href="lahtifgc.html"> -->
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/lahtifgc.jpg" width="400" height="470" loading="lazy"
                       alt="Roleplaying club" class="img-cover">
@@ -229,12 +229,12 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Sunnuntaina @ 16:00</div>
+                    <div class="card-badge skewBg">Sunnuntaina @ 16:00<br><span style="color:purple">Sivu ei ole vielä tehty</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">Lahti FGC<br><br><span class="span">Taistelupeliyhteisö</span></div>
                     </h3>
-                  </a>
+                  <!--</a>-->
                   </div>
 
                 </div>
