--- a/en/home.html
+++ b/en/home.html
@@ -216,7 +216,7 @@
               </li>
 			  <li class="scrollbar-item">
                 <div class="latest-game-card">
-                  <a href="lahtifgc_eng.html">
+                  <!-- <a href="lahtifgc_eng.html"> -->
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/lahtifgc.jpg" width="400" height="470" loading="lazy"
                       alt="Roleplaying club" class="img-cover">
@@ -224,12 +224,14 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg">Sundays @ 16:00</div>
+                    <div class="card-badge skewBg">Sundays @ 16:00<br><span style="color:purple">Site not yet made</span></div>
+
+                    
 
                     <h3 class="h3">
                       <div class="card-title">Lahti FGC<br><br><span class="span">Fighting game community</span></div>
                     </h3>
-                  </a>
+                 <!--</a>-->
                   </div>
 
                 </div>
