--- a/en/home.html
+++ b/en/home.html
@@ -167,7 +167,7 @@
           <div class="container">
 
             <h2 class="h2 section-title">
-              Weekly <span class="span">activity</span>
+              <span class="span">Weekly activity</span>
             </h2>
 
 			<br>
@@ -216,7 +216,7 @@
               </li>
 			  <li class="scrollbar-item">
                 <div class="latest-game-card">
-                  <!-- <a href="lahtifgc_eng.html"> -->
+                  <!-- <a href="index.html"> -->
                   <figure class="card-banner img-holder" style="--width: 400; --height: 470;">
                     <img src="../assets/images/lahtifgc.jpg" width="400" height="470" loading="lazy"
                       alt="Roleplaying club" class="img-cover">
@@ -541,6 +541,18 @@
 
         </div>
 -->
+
+      </div>
+    </div>
+
+     <div class="footer-bottom">
+      <div class="container">
+
+        <p class="copyright">
+          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
+          and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
+        </p>
 
       </div>
     </div>
