--- a/fi/index.html
+++ b/fi/index.html
@@ -172,7 +172,7 @@
           <div class="container">
 
             <h2 class="h2 section-title">
-              Viikottainen <span class="span">Toiminta</span>
+              <span class="span">Peli-illat</span>
             </h2>
 
 			<br>
@@ -515,11 +515,13 @@
       </div>
     </div>
 
-    <div class="footer-bottom">
+     <div class="footer-bottom">
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam. All Right Reserved by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
+          &copy; 2025 Kaptam Gamers ry. 
+          Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
+          ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
 
       </div>
