--- a/en/videogames.html
+++ b/en/videogames.html
@@ -505,11 +505,13 @@
       </div>
     </div>
 
-    <div class="footer-bottom">
+     <div class="footer-bottom">
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam. All Right Reserved by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
+          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
+          and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
 
       </div>
