video smoothly transistion in mobile view -done

--- a/en/home.html
+++ b/en/home.html
@@ -121,8 +121,7 @@
         -->
 	
 
-	  
-	         <section class="section latest-game" id="clubs" aria-label="clubs" style="background-image: url('../assets/images/index-background.jpg')">
+	         <section class="live-match-player" id="clubs" aria-label="clubs" style="background-image: url('../assets/images/index-background.jpg')">
 
           <div class="container">
 
@@ -133,7 +132,9 @@
 		   </iframe>
 			</div>
           </div>
-		  
+		 <br>
+     <br>
+     <br>
 		</section>
 	<section class="hero-content">
             <p class="hero-text" align="center">
