--- a/en/home.html
+++ b/en/home.html
@@ -120,11 +120,7 @@
           - #Introduction
         -->
 	
-
-		 <br>
-		 <br>
-		 <br>
-	         <section class="live-match-player" id="clubs" aria-label="clubs" style="background-image: url('../assets/images/index-background.jpg')">
+	         <section class="section latest-game" id="clubs" aria-label="clubs" style="background-image: url('../assets/images/index-background.jpg')">
 
           <div class="container">
 
@@ -136,12 +132,8 @@
 			</div>
           </div>
 
-		 <br>
-		 <br>
-		 <br>
 		</section>
 
-		 <br>
 	<section class="hero-content">
             <p class="hero-text" align="center">
 			<span>
