--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -137,7 +137,7 @@
               Puolenkuun Pelit
             </h2>
             <p class="hero-text"><span>
-             Lahti FGC gaming evenings contain at least 4 PC gaming setups and 20 games that anybody
+             Lahti FGC gaming evenings contain at least 4 PC gaming setups, controllers and 20 games that anybody
              over 12 can play (most of our games gave PEGI 12 age rating). PC setups are offline only.
 			  <br>
 			  <br>
