--- a/en/about.html
+++ b/en/about.html
@@ -173,7 +173,7 @@
 	  
 	  
 	  
-      <section class="section hero" id="about" aria-label="about"
+      <section class="hero" id="help" aria-label="help"
         style="background-image: url('../assets/images/help_banner2.jpg'); margin-top:0px;">
 		<div class="container">
 
