temp not final bg

--- a/en/home.html
+++ b/en/home.html
@@ -120,7 +120,7 @@
           - #Introduction
         -->
 	
-	         <section class="latest-game" id="video" aria-label="clubs">
+	         <section class="latest-game" id="video" aria-label="clubs" style="background-image: url('../assets/images/index-background.jpg')">
 
           <div class="container">
 
