--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -69,10 +69,6 @@
 
             <!--
             <li class="navbar-item">
-                  <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
-                  </li>
-
-            <li class="navbar-item">
                   <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
                   </li>
             -->
@@ -261,9 +257,10 @@
 			<span align="left" style="padding-left:25px">
         <a style="margin-bottom:-15px;color:hsl(42, 100%, 65%)">
         Clicking them takes you to their steam page
-</a>
-<br>
-          <a href="https://store.steampowered.com/app/586140/BlazBlue_Centralfiction/" target="_blank" style="margin-bottom:-15px">
+        </a>
+        <br>
+          <a href="https://store.steampowered.com/app/586140/BlazBlue_Centralfiction/" 
+          class="highlight-text" target="_blank" style="margin-bottom:-15px">
           BlazBlue Centralfiction (+ JUBEI)
           </a>
           <br>
@@ -271,7 +268,7 @@
           "
           https://store.steampowered.com/app/1515950/Capcom_Arcade_Stadium/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Capcom Arcade Stadium
           </a>
           <br>
@@ -279,7 +276,7 @@
           "
           https://store.steampowered.com/app/1755910/Capcom_Arcade_2nd_Stadium/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Capcom Arcade 2nd Stadium (Darkstalkers)
           </a>
           <br>
@@ -287,7 +284,7 @@
           "
           https://store.steampowered.com/app/838380/DEAD_OR_ALIVE_6/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           DEAD OR ALIVE 6 (+ “Phase 4” character)
           </a>
           <br>
@@ -295,7 +292,7 @@
           "
           https://store.steampowered.com/app/244730/Divekick/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Divekick
           </a>
           <br>
@@ -303,7 +300,7 @@
           "
           https://store.steampowered.com/app/366240/GAROU_MARK_OF_THE_WOLVES/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           GAROU: MARK OF THE WOLVES
           </a>
           <br>
@@ -311,7 +308,7 @@
           "
           https://store.steampowered.com/app/2157560/Granblue_Fantasy_Versus_Rising/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Granblue Fantasy Versus: Rising (+ DLC)
           </a>
           <br>
@@ -319,7 +316,7 @@
           "
           https://store.steampowered.com/app/1384160/GUILTY_GEAR_STRIVE/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Guilty Gear -Strive- (+ DLC)
           </a>
           <br>
@@ -327,7 +324,7 @@
           "
           https://store.steampowered.com/app/222440/THE_KING_OF_FIGHTERS_2002_UNLIMITED_MATCH/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           The King of Fighters 2002 UM
           </a>
           <br>
@@ -335,7 +332,7 @@
           "
           https://store.steampowered.com/app/222420/THE_KING_OF_FIGHTERS_98_ULTIMATE_MATCH_FINAL_EDITION/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           The King of Fighters '98 UMFE
           </a>
           <br>
@@ -343,7 +340,7 @@
           "
           https://store.steampowered.com/app/411370/Melty_Blood_Actress_Again_Current_Code/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Melty Blood Actress Again Current Code
           </a>
           <br>
@@ -351,7 +348,7 @@
           "
           https://store.steampowered.com/app/1372280/MELTY_BLOOD_TYPE_LUMINA/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Melty Blood Type Lumina
           </a>
           <br>
@@ -359,7 +356,7 @@
           "
           https://store.steampowered.com/app/307780/Mortal_Kombat_X/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Mortal Kombat XL
           </a>
           <br>
@@ -367,7 +364,7 @@
           "
           https://store.steampowered.com/app/94400/Nidhogg/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Nidhogg
           </a>
           <br>
@@ -375,7 +372,7 @@
           "
           https://store.steampowered.com/app/383980/Rivals_of_Aether/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Rivals of Aether
           </a>
           <br>
@@ -383,7 +380,7 @@
           "
           https://store.steampowered.com/app/245170/Skullgirls_2nd_Encore/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Skullgirls 2nd Encore (+ DLC)
           </a>
           <br>
@@ -391,7 +388,7 @@
           "
           https://store.steampowered.com/app/586200/Street_Fighter_30th_Anniversary_Collection/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Street Fighter 30th Anniversary
           </a>
           <br>
@@ -399,7 +396,7 @@
           "
           https://store.steampowered.com/app/310950/Street_Fighter_V/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Street Fighter V Champion Edition
           </a>
           <br>
@@ -407,7 +404,7 @@
           "
           https://store.steampowered.com/app/45760/Ultra_Street_Fighter_IV/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Ultra Street Fighter IV
           </a>
           <br>
@@ -415,8 +412,12 @@
           "
           https://store.steampowered.com/app/389730/TEKKEN_7/
           " 
-          target="_blank" style="margin-bottom:-15px">
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Tekken 7 (+ DLC)
+			    </a>
+          <br>
+          <a style="margin-bottom:-15px">
+          New games are determined by visitors demand for the game
 			    </a>
           <br>
         </span>
@@ -733,9 +734,6 @@
         </div>
 
 
-
-
-<!--
         <div class="footer-wrapper">
 
           <div class="social-wrapper">
@@ -744,14 +742,14 @@
 
             <ul class="contact-list">
               <li>
-                <a href="https://chat.whatsapp.com/E4ZDoieFq5X8K91nDPiM3R" target="_blank" class="social-link-2" style="background-color: #076e54">
+                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
                   <ion-icon name="logo-whatsapp"></ion-icon>
 				  <p>WhatsApp</p>
                 </a>
               </li>
 
               <li>
-                <a href="https://www.instagram.com/boardgameskerho" target="_blank" class="social-link-2" style="background-color: #e60073">
+                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
                   <ion-icon name="logo-instagram"></ion-icon>
 				   <p>Instagram</p>
                 </a>
@@ -762,7 +760,6 @@
           </div>
 
         </div>
--->
 		
       </div>
     </div>
