--- a/en/fighting.html
+++ b/en/fighting.html
@@ -59,11 +59,11 @@
 			      <li class="navbar-item">
             <a href="videogames.html" class="navbar-link skewBg" data-nav-link>Video games club</a>
             </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
-                  </li>
 
+            <li class="navbar-item">
+                  <a href="lahtifgc_eng.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+                  </li>
+            <!--
             <li class="navbar-item">
                   <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
                   </li>
@@ -370,9 +370,6 @@
         </div>
 
 
-
-
-<!--
         <div class="footer-wrapper">
 
           <div class="social-wrapper">
@@ -381,14 +378,14 @@
 
             <ul class="contact-list">
               <li>
-                <a href="https://chat.whatsapp.com/E4ZDoieFq5X8K91nDPiM3R" target="_blank" class="social-link-2" style="background-color: #076e54">
+                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
                   <ion-icon name="logo-whatsapp"></ion-icon>
 				  <p>WhatsApp</p>
                 </a>
               </li>
 
               <li>
-                <a href="https://www.instagram.com/boardgameskerho" target="_blank" class="social-link-2" style="background-color: #e60073">
+                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
                   <ion-icon name="logo-instagram"></ion-icon>
 				   <p>Instagram</p>
                 </a>
@@ -399,7 +396,6 @@
           </div>
 
         </div>
--->
 		
       </div>
     </div>
