--- a/fi/index.html
+++ b/fi/index.html
@@ -64,11 +64,11 @@
 			<li class="navbar-item">
             <a href="lautapeli.html" class="navbar-link skewBg" data-nav-link>Lautapelikerho</a>
             </li>
-      <!--
-			<li class="navbar-item">
-            <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
-            </li>
 
+			<li class="navbar-item">
+            <a href="lahtifgc.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+            </li>
+      <!--
 			<li class="navbar-item">
             <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
             </li>
@@ -501,6 +501,33 @@
 
               <li>
                 <a href="https://www.instagram.com/boardgameskerho" target="_blank" class="social-link-2" style="background-color: #e60073">
+                  <ion-icon name="logo-instagram"></ion-icon>
+				   <p>Instagram</p>
+                </a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
+        <div class="footer-wrapper">
+
+          <div class="social-wrapper">
+
+            <p class="footer-list-title">Lahti FGC</p>
+
+            <ul class="contact-list">
+              <li>
+                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+				  <p>WhatsApp</p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
                   <ion-icon name="logo-instagram"></ion-icon>
 				   <p>Instagram</p>
                 </a>
