--- a/fi/info.html
+++ b/fi/info.html
@@ -66,11 +66,11 @@
             <li class="navbar-item">
                   <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
                   </li>
-            <!--
-            <li class="navbar-item">
-                  <a href="lahtifgc.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
-                  </li>
 
+            <li class="navbar-item">
+                  <a href="lahtifgc.html" class="navbar-link skewBg2" data-nav-link>Lahti FGC</a>
+                  </li>
+            <!--
             <li class="navbar-item">
                   <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Pelilista</a>
                   </li>
@@ -391,7 +391,32 @@
         </div>
 
 
-		
+        <div class="footer-wrapper">
+
+          <div class="social-wrapper">
+
+            <p class="footer-list-title">Lahti FGC</p>
+
+            <ul class="contact-list">
+              <li>
+                <a href="https://chat.whatsapp.com/Ks7Mevd9v0gELKhYcM3qeY" target="_blank" class="social-link-2" style="background-color: #076e54">
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+				  <p>WhatsApp</p>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://www.instagram.com/lahtifgc" target="_blank" class="social-link-2" style="background-color: #e60073">
+                  <ion-icon name="logo-instagram"></ion-icon>
+				   <p>Instagram</p>
+                </a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
 		
 		
       </div>
