--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -417,7 +417,7 @@
 			    </a>
           <br>
           <a style="margin-bottom:-15px">
-          New games are determined by visitors demand for the game
+          New games are determined by visitors demand for the game.
 			    </a>
           <br>
         </span>
