--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -323,7 +323,7 @@
           https://store.steampowered.com/app/838380/DEAD_OR_ALIVE_6/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          DEAD OR ALIVE 6 (+ “Phase 4” character)
+          DEAD OR ALIVE 6 (+ “Phase 4” hahmo)
           </a>
           <br>
           <a href=
