--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -432,6 +432,14 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/45760/Ultra_Street_Fighter_IV/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          Ultra Street Fighter IV
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/310950/Street_Fighter_V/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -440,10 +448,10 @@
           <br>
           <a href=
           "
-          https://store.steampowered.com/app/45760/Ultra_Street_Fighter_IV/
+          https://store.steampowered.com/app/1364780/Street_Fighter_6/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
-          Ultra Street Fighter IV
+          Street Fighter 6 (+ DLC)
           </a>
           <br>
           <a href=
