--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -192,13 +192,15 @@
           <div class="container">
 
             <h2 class="h2 section-title">
-              Guide for arriving to <span class="span"> weekly session</span>
+              Guide for Puolenkuun Pelit <span class="span"> shared gaming space</span>
             </h2>
 
-            <a href="https://youtu.be/MzYRORMoOwo" target="_blank">
-            <img src="../assets/images/lahti_fgc_images/youtube/english2.jpg" width="450" height="600" loading="lazy"
-                    class="img-cover" style="border: 2px solid rgb(124, 124, 124)">
-                </a>
+      <div class="responsive-iframe">
+           <iframe width="660" height="371" src="https://www.youtube.com/embed/MzYRORMoOwo" title="Puolenkuun Pelit Guide" 
+		   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+		   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+		   </iframe>
+			</div>
 
           </div>
 		  
@@ -214,11 +216,16 @@
 		<br>
 		<br>
 		<br>
+		<br>
 
 
 		<div class="container" style="margin-bottom:-100px">
 
           <div class="hero-content">
+
+                        <h2 class="h2 section-title">
+              Guide for arriving to <span class="span"> weekly session</span>
+            </h2>
 
             <p class="hero-text" align="center">
               Puolenkuun Pelit<br>
