--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -193,13 +193,15 @@
           <div class="container">
 
             <h2 class="h2 section-title">
-              Opas videopeli-iltaan <span class="span"> saapumiseen</span>
+              Opas Puolenkuun Pelien <span class="span"> yhteiseen pelitilaan</span>
             </h2>
 
-            <a href="https://youtu.be/IPeG8v4L3Hc" target="_blank">
-            <img src="../assets/images/lahti_fgc_images/youtube/finnish2.jpg" width="450" height="600" loading="lazy"
-                    class="img-cover" style="border: 2px solid rgb(124, 124, 124)">
-                </a>
+      <div class="responsive-iframe">
+           <iframe width="660" height="371" src="https://www.youtube.com/embed/IPeG8v4L3Hc" title="Puolenkuun pelien opas" 
+		   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+		   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+		   </iframe>
+			</div>
 
           </div>
 		  
@@ -215,11 +217,16 @@
 		<br>
 		<br>
 		<br>
+		<br>
 
 
 		<div class="container" style="margin-bottom:-100px">
 
           <div class="hero-content">
+
+            <h2 class="h2 section-title">
+              Opas  <span class="span">Lahti FGC </span> iltaan <span class="span"> saapumiseen</span>
+            </h2>
 
             <p class="hero-text" align="center">
               Puolenkuun Pelit<br>
