minor (added 2 games to Lahti FGC)

--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -377,6 +377,14 @@
           <br>
           <a href=
           "
+          https://store.steampowered.com/app/1602010/Persona_4_Arena_Ultimax/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          Persona 4 Arena Ultimax
+          </a>
+          <br>
+          <a href=
+          "
           https://store.steampowered.com/app/383980/Rivals_of_Aether/
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
@@ -429,6 +437,14 @@
           " 
           target="_blank" class="highlight-text" style="margin-bottom:-15px">
           Tekken 7 (+ DLC)
+			    </a>
+          <br>
+          <a href=
+          "
+          https://store.steampowered.com/app/2076010/UNDER_NIGHT_INBIRTH_II_SysCeles/
+          " 
+          target="_blank" class="highlight-text" style="margin-bottom:-15px">
+          UNDER NIGHT IN-BIRTH II Sys:Celes
 			    </a>
           <br>
           <a style="margin-bottom:-15px">
