--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -138,7 +138,7 @@
               Puolenkuun Pelit
             </h2>
             <p class="hero-text"><span> <a style="margin-top:-10px">
-             Lahti FGC peli-illat sisältävät vähintään neljä tietokonetta, 
+             Lahti FGC (taistelupeliyhteisö) peli-illat sisältävät vähintään neljä tietokonetta, 
              ohjaimia ja yli 20 erilaista peliä, joita kuka tahansa yli 12-vuotias voi pelata 
              (useimmat pelimme ovat PEGI 12 -ikärajallisia). PC-laitteistot ovat käytettävissä vain offline-tilassa.
 			  <br>
