--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -138,7 +138,7 @@
               Puolenkuun Pelit
             </h2>
             <p class="hero-text"><span> <a style="margin-top:-10px">
-             Lahti FGC gaming evenings contain at least 4 PC gaming setups, controllers and over 20 different games that anybody
+             Lahti FGC (fighting game community) gaming evenings contain 5 PC gaming setups, controllers and over 20 different games that anybody
              over 12 can play (most of our games are PEGI 12 age rated). PC setups are offline only.
 			  <br>
 			  <br>
