--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -142,7 +142,7 @@
              over 12 can play (most of our games are PEGI 12 age rated). PC setups are offline only.
 			  <br>
 			  <br>
-             If you want, you can bring your own controllers & systems.
+             If you want, you can bring your own controller & system.
              
             </a></span></p>
 
