--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -141,7 +141,7 @@
              Lahti FGC (taistelupeliyhteisö) peli-illat sisältävät viisi tietokonetta, ohjaimia ja yli 20 erilaista peliä, joita kuka tahansa yli 12-vuotias voi pelata (useimmat pelimme ovat PEGI 12 -ikärajallisia). PC-laitteistot ovat käytettävissä vain offline-tilassa.
 			  <br>
 			  <br>
-             Voit halutessasi tuoda omat ohjaimesi ja järjestelmäsi.
+             Voit halutessasi tuoda oman ohjaimesi ja järjestelmäsi.
              
             </a></span></p>
 
