--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -529,8 +529,18 @@
 
 
 
+<div class="image-modal" id="imageModal">
+  <span class="image-modal-close" id="imageModalClose">&times;</span>
 
+  <button class="image-nav left" id="navLeft">&#10094;</button>
+  <button class="image-nav right" id="navRight">&#10095;</button>
 
+  <div class="image-modal-content" id="imageModalContent">
+    <!-- Fullscreen images inserted here -->
+  </div>
+
+  <div class="image-indicator" id="imageIndicator"></div>
+</div>  <!-- 
 
   <!-- 
     - custom js link
@@ -544,6 +554,7 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css>
+
 
 </body>
 
