--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -523,6 +523,20 @@
 
 
 
+
+<div class="image-modal" id="imageModal">
+  <span class="image-modal-close" id="imageModalClose">&times;</span>
+
+  <button class="image-nav left" id="navLeft">&#10094;</button>
+  <button class="image-nav right" id="navRight">&#10095;</button>
+
+  <div class="image-modal-content" id="imageModalContent">
+    <!-- Fullscreen images inserted here -->
+  </div>
+
+  <div class="image-indicator" id="imageIndicator"></div>
+</div>  <!-- 
+
   <!-- 
     - custom js link
   -->
