--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -47,10 +47,12 @@
 
   <header class="header">
 
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom skewBg"  id="lahtifgc" data-header>
       <div class="container">
 
-        <a href="home.html" class="logo">Kaptam</a>
+        <a href="home.html" class="logo">
+           Kaptam
+          </a>
 
         <nav class="navbar" data-navbar>
           <ul class="navbar-list">
