--- a/fi/index.html
+++ b/fi/index.html
@@ -127,7 +127,7 @@
 	
 
 	  
-	        <section class="section latest-game" id="clubs" aria-label="clubs" style="background-image: url('../assets/images/index-background.jpg')">
+	        <section class="section latest-game" id="video" aria-label="clubs">
 
             <div class="container">
 
